# Banshee

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: codex-executor.md  gemini-context.md  qwen-automation.md
.github/workflows/: release.yml
public/: manifest.json
scripts/: bootstrap-codex.mjs  run-codex.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  checkpoint-wrapper.js  claude-bridge.cjs  claude-bridge.js  claude-diagnostic.js  claude-handler-backup-original.js  claude-handler-backup.js  claude-handler-delay.js  claude-handler-fixed.js  claude-handler-mock.js  claude-handler-pty.js  claude-handler-smart.js  claude-handler-ultimate.js  claude-handler-ultra.js  claude-handler-working.js  claude-init.js  claude-mock.js  codex-handler.js  gemini-handler.js  qwen-handler.js  tauri.conf.json  test-claude-handler.js
src-tauri/capabilities/: default.json
src-tauri/claude-subagents/: codex-executor  gemini-context  qwen-automation
src-tauri/icons/: icon.icns
src-tauri/model_handlers/: claude-handler.js  claude.ts  codex-handler.js  tsconfig.json
src-tauri/src/: browser.rs  checkpoint.rs  claude_binary.rs  claude_bridge.rs  codex_bridge.rs  codex_repo.rs  codex_run.rs  debugger.rs  lib.rs  terminal.rs
src/components/: BreakpointsPanel.tsx  BrowserTab.tsx  CallStackPanel.tsx  ChatPanel.tsx  ChatView.tsx  CheckpointsPanel.tsx  CodexPanel.tsx  Composer.tsx  CustomInput.tsx  CustomSelect.tsx  (+47 more)
vsix_extracted/: [Content_Types].xml  extension.vsixmanifest
(+26 files in other folders)
