[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
once_cell = "1.19"
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs = { version = "2" }
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
base64 = "0.22.1"
dirs = "5.0"
codex-protocol = { path = "../vendors/codex/codex-rs/protocol" }
uuid = { version = "1", features = ["v4"] }
shlex = "1.3"
